Documentation edits made through Mintlify web editor

--- a/api-banco-de-dados/c13-como-contar-os-registros-de-uma-colecao.mdx
+++ b/api-banco-de-dados/c13-como-contar-os-registros-de-uma-colecao.mdx
@@ -2,7 +2,7 @@
 title: '13. Como contar os registros de uma coleção'
 ---
 
-Para que o desenvolvedor conte o número de registros de uma tabela (sabendo apenas utilizar o carregamento de coleções), seria necessário contar o número de posições do vetor resultante da função `load()`. O Adianti Framework conta com a função `count() , que torna essa tarefa mais fácil. O método `count()` deve ser usado da mesma maneira que a função `load()`.
+Para que o desenvolvedor conte o número de registros de uma tabela (sabendo apenas utilizar o carregamento de coleções), seria necessário contar o número de posições do vetor resultante da função `load()`. O Adianti Framework conta com a função `count()` , que torna essa tarefa mais fácil. O método `count()` deve ser usado da mesma maneira que a função `load()`.
 
 > Atenção: o método `load()` não deve ser usado junto com a função `select()`, pois internamente ele realizará um comando `select count(*)`.
 
