Documentation edits made through Mintlify web editor

--- a/interface/tform.mdx
+++ b/interface/tform.mdx
@@ -33,7 +33,7 @@ Retorna o nome do formulário.
 
 ```php
 $formulario = new TForm('formularioExemplo');
-echo $formulario->getName();
+$nome = $formulario->getName();
 ```
 
 <br/>
