Documentation edits made through Mintlify web editor

--- a/interface/tscript.mdx
+++ b/interface/tscript.mdx
@@ -31,9 +31,9 @@ TScript::create('alert("Olá, mundo!");', true, 3000);
 TScript::importFromFile('caminho/para/o/arquivo.js');
 TScript::create('helloWorld();');
 ```
-Código de exemplo do arquivo JS em questão. Perceba que a função `helloWorld()` chamada foi declarada nesse arquivo.
+Código de exemplo do arquivo JS em questão. Perceba que a função `helloWorld()` chamada anteriormente foi declarada aqui:
 
-```php
+```js
 function helloWorld()
 {
     alert("Hello World!");
