--- a/interface/tform.mdx
+++ b/interface/tform.mdx
@@ -7,6 +7,7 @@ description: '`TForm` é uma classe wrapper para lidar com formulários (derivad
 Construtor da classe `TForm`.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome do formulário.
 
 **Exemplo de código:**
@@ -20,6 +21,7 @@ $formulario = new TForm('formularioExemplo');
 Define o nome do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome do formulário.
 
 **Exemplo de código:**
@@ -45,6 +47,7 @@ $nome = $formulario->getName();
 Define se o formulário será editável.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$bool`: Booleano indicando se o formulário é editável.
 
 **Exemplo de código:**
@@ -59,6 +62,7 @@ $formulario->setEditable(true);
 Define o nome da tag do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome da tag.
 
 **Exemplo de código:**
@@ -73,6 +77,7 @@ $formulario->setTagName('div');
 Adiciona um campo ao formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$field`: Objeto do campo a ser adicionado.
 
 **Exemplo de código:**
@@ -88,6 +93,7 @@ $formulario->addField($campo);
 Remove um campo do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$field`: Objeto do campo a ser removido.
 
 **Exemplo de código:**
@@ -115,6 +121,7 @@ $formulario->delFields();
 Define os campos do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$fields`: Array de objetos dos campos.
 
 **Exemplo de código:**
@@ -130,6 +137,7 @@ $formulario->setFields($campos);
 Obtém um campo do formulário pelo nome.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome do campo.
 
 **Exemplo de código:**
@@ -155,6 +163,7 @@ $campos = $formulario->getFields();
 Marca um campo como silencioso, para não ser processado automaticamente.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome do campo.
 
 **Exemplo de código:**
@@ -167,8 +176,11 @@ $formulario->silentField('campoSilencioso');
 Define uma propriedade do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome da propriedade.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$value`: Valor da propriedade.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$replace`: Substitui o valor se verdadeiro.
 
 **Exemplo de código:**
@@ -183,6 +195,7 @@ $formulario->setProperty('action', 'process.php');
 Remove uma propriedade do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome da propriedade.
 
 **Exemplo de código:**
@@ -197,6 +210,7 @@ $formulario->unsetProperty('action');
 Define os dados do formulário a partir de um objeto.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$object`: Objeto contendo os dados.
 
 **Exemplo de código:**
@@ -213,6 +227,7 @@ $formulario->setData($dados);
 Retorna os dados do formulário como um objeto da classe especificada.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$class`: Classe do objeto retornado.
 
 **Exemplo de código:**
@@ -227,7 +242,9 @@ $dados = $formulario->getData();
 Retorna os valores iniciais do formulário como um objeto da classe especificada.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$class`: Classe do objeto retornado.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$withOptions`: Inclui opções se verdadeiro.
 
 **Exemplo de código:**
@@ -253,6 +270,7 @@ $formulario->validate();
 Limpa os dados do formulário.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$keepDefaults`: Mantém os valores padrão se verdadeiro.
 
 **Exemplo de código:**
@@ -267,6 +285,7 @@ $formulario->clear();
 Adiciona um objeto ao formulário, como um container.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$object`: Objeto a ser adicionado.
 
 **Exemplo de código:**
@@ -306,6 +325,7 @@ $child = $formulario->getChild();
 (Método estático) Retorna o objeto formulário pelo seu nome.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$name`: Nome do formulário.
 
 **Exemplo de código:**
@@ -319,10 +339,15 @@ $formulario = TForm::getFormByName('formularioExemplo');
 (Método estático) Envia dados para um formulário localizado na janela pai.
 
 **Parâmetros:**
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$form_name`: Nome do formulário.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$object`: Objeto contendo os dados do formulário.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$aggregate`: Agrega os dados se verdadeiro.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$fireEvents`: Dispara eventos se verdadeiro.
+<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
   - `$timeout`: Tempo de espera antes de enviar os dados.
 
 **Exemplo de código:**
