Documentation edits made through Mintlify web editor

--- a/interface/tform.mdx
+++ b/interface/tform.mdx
@@ -3,12 +3,11 @@ title: 'TForm'
 description: '`TForm` é uma classe wrapper para lidar com formulários (derivado da classe `TField`). Ela permite criar e gerenciar formulários de forma dinâmica e interativa dentro de aplicações web.'
 ---
 
-## __construct($name)
+## __construct
 Construtor da classe `TForm`.
 
 **Parâmetros:**
-<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
-  - `$name`: Nome do formulário.
+<ResponseField name="$name" type="mixed" required>Nome do formulário.</ResponseField>
 
 **Exemplo de código:**
 ```php
@@ -17,12 +16,11 @@ $formulario = new TForm('formularioExemplo');
 
 <br/>
 
-## setName($name)
+## setName
 Define o nome do formulário.
 
 **Parâmetros:**
-<ResponseField name="$text" type="mixed" required>Texto do título do separador.</ResponseField>
-  - `$name`: Nome do formulário.
+<ResponseField name="$name" type="mixed" required>Nome do formulário.</ResponseField>
 
 **Exemplo de código:**
 ```php
