Documentation edits made through Mintlify web editor

--- a/interface/tform.mdx
+++ b/interface/tform.mdx
@@ -331,3 +331,5 @@ $botao = new TButton('btnEnviarDados');
 $botao->setAction(new TAction(['TForm', 'sendData'], ['formularioExemplo', $objetoDados]), 'Enviar Dados');
 $botao->show();
 ```
+
+// Verificar se os exemplos de código são válidos.
