--- a/selecao-de-dados/tdbselect.mdx
+++ b/selecao-de-dados/tdbselect.mdx
@@ -1,13 +1,14 @@
 ---
-title: 'TDBSelect'
-description: 'O `TDBSelect` é um componente de seleção de dados de banco de dados. Permite a seleção de dados diretamente de uma tabela do banco de dados, baseando-se em critérios e ordenação específicos.'
+title: "TDBSelect"
+description: "O `TDBSelect` é um componente de seleção de dados de banco de dados. Permite a seleção de dados diretamente de uma tabela do banco de dados, baseando-se em critérios e ordenação específicos."
 ---
 
 Derivado da classe `TSelect`, métodos herdados não sobrescritos podem também ser utililzados por objetos `TDBSelect`. Acesse a [documentação do componente/classe-pai](https://madbuilder.mintlify.app/selecao-de-dados-fixos/tselect) para conhecê-los.
 
-_Obs.: todos os métodos presentes nesta documentação utilizarão como base uma tabela chamada "produto". Esta tabela foi criada em um modelo de dados chamado "docs" e possui três colunas: id, nome, preco._
+*Obs.: todos os métodos presentes nesta documentação utilizarão como base uma tabela chamada "produto". Esta tabela foi criada em um modelo de dados chamado "docs" e possui três colunas: id, nome, preco.*
 
-## __construct
+## \_\_construct
+
 Construtor da classe `TDBSelect`.
 
 **Parâmetros:**
@@ -20,6 +21,7 @@ Construtor da classe `TDBSelect`.
 <ResponseField name="$criteria" type="TCriteria" default="NULL">(Opcional) Critérios para filtrar o modelo.</ResponseField>
 
 **Exemplo de código:**
+
 ```php
 $selecaoProduto = new TDBSelect('selecaoProduto', 'docs', 'Produto', 'id', '{nome}, R$ {preco}');
 $selecaoProduto->setSize(180, 70);
@@ -27,6 +29,7 @@ $selecaoProduto->enableSearch();
 ```
 
 **Exemplo de código (com parâmetros opcionais):**
+
 ```php
 $criterio = new TCriteria();
 $criterio->add(new TFilter('preco', '<', 5)); // Filtrar por itens da tabela cujo preço seja menor que 5
